change home css alignment, fix cards issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 body{
-    /* background-image: url(./img/3649732.jpg); */
+    background-image: url(./img/3649732.jpg);
     background-size:cover;
     background-repeat: no-repeat;
 }
